# Voxel-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VulkanProject.sln  VulkanProject.vcxproj  VulkanProject.vcxproj.filters  vcpkg.json
Source/Editor/: CMakeLists.txt  EditorApplication.cpp  EditorLayer.cpp  EditorLayer.h
Source/Editor/GUI/: EditorConsole.cpp  EditorConsole.h  GuiTree.cpp  GuiTree.h  ImGuiWindow.cpp  ImGuiWindow.h  NodeEditor.cpp  NodeEditor.h  PerformanceWindow.cpp  PerformanceWindow.h  PrimitivesPanel.cpp  PrimitivesPanel.h  SceneViewport.cpp  SceneViewport.h  UsefulToolsWindow.cpp  UsefulToolsWindow.h
Source/Editor/NodeGraph/: NodeEditor.cpp  NodeEditor.h  NodeGraph.cpp  NodeGraph.h
Source/Editor/NodeGraph/Editor/: NodeEditor.cpp  NodeEditor.h
Source/Editor/NodeGraph/Manipulators/: CanvasMoveManipulator.cpp  CanvasSelectRectManipulator.cpp  CanvasZoomManipulator.cpp  ICanvasManipulator.cpp  ICanvasManipulator.h
Source/Editor/NodeGraph/Nodes/: ActionNode.cpp  CompositeNode.h  NodeBase.cpp  NodeBase.h
Source/Editor/NodeGraph/Runtime/: NodeGraph.cpp  NodeGraph.h  NodePort.cpp  NodePort.h
Source/Runtime/: CMakeLists.txt  version.h  version.h.in
Source/Runtime/Core/: Base.h  CoreDefines.h  CoreMinimal.h  CoreTypes.h  pch.h
Source/Runtime/Core/Internal/: Application.cpp  Application.h  EntryPoint.h  Layer.h  LayerStack.cpp  Timer.h  Timestep.h  Window.h
Source/Runtime/Core/Logging/: Assert.h  Log.h
Source/Runtime/Core/Math/: Box.cpp  Box.h  Octree.cpp  Octree.h  OctreeNode.h  Ray.h
Source/Runtime/Engine/Components/: Components.h
Source/Runtime/Engine/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderLexer.cpp  ShaderLexer.h
Source/Runtime/Engine/Tests/: VModelsTests.cpp  VModelsTests.h
Source/Runtime/InputCore/: InputCore.h  InputSystem.h
Source/Runtime/InputCore/Events/: ApplicationEvent.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.h  KeyCode.h  KeyboardEvent.h  MouseCode.h  MouseEvent.h
Source/Runtime/Renderer/: Buffer.cpp  Buffer.h  GizmosAPI.cpp  GizmosAPI.h  IMaterial.cpp  IMaterial.h  RenderCommand.cpp  RenderCommand.h  RenderSettings.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RenderingStructs.h  Shader.cpp  Shader.h  ShaderLayout.cpp  ShaderLayout.h  UniformBuffer.h  Vertex.h
Source/Runtime/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h
Source/Runtime/Vulkan/vkInit/: VulkanCommand.cpp  VulkanCommand.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.h  VulkanSwapchain.h  VulkanSync.h
Source/Runtime/Vulkan/vkUtils/: VulkanAlloc.cpp  VulkanAlloc.h  VulkanGraphicsPipelineBuilder.cpp  VulkanGraphicsPipelineBuilder.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanMaterials.cpp  VulkanMaterials.h  VulkanQueueFamilies.cpp  VulkanQueueFamilies.h  VulkanShader.cpp  VulkanShader.h  VulkanStatistics.cpp  VulkanStatistics.h  VulkanSwapChainFrame.cpp  VulkanSwapChainFrame.h  VulkanValidation.cpp  VulkanValidation.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
VoxelEditor/: CMakeLists.txt  VoxelEditor.sln  VoxelEditor.vcxproj  VoxelEditor.vcxproj.filters  imgui.ini
VoxelEditor/src/: EditorApplication.cpp  EditorApplication.h  EditorConsole.cpp  EditorConsole.h  EditorLayer.cpp  EditorLayer.h  PrimitivesPanel.cpp  PrimitivesPanel.h  SceneView.cpp  SceneView.h
VoxelEditor/src/gui/: EditorConsole.cpp  EditorConsole.h  GuiTree.cpp  GuiTree.h  NodeEditor.cpp  NodeEditor.h  PerformanceWindow.cpp  PerformanceWindow.h  PrimitivesPanel.cpp  PrimitivesPanel.h  SceneViewport.cpp  SceneViewport.h  UsefulToolsWindow.h
VoxelEngine/: CMakeLists.txt  VoxelEngine.vcxproj  VoxelEngine.vcxproj.filters  version.h.in
VoxelEngine/shaders/: vert.spv
VoxelEngine/src/: EntryPoint.h  VoxelEngine.h  pch.h  version.h
VoxelEngine/src/assets_management/: AssetsProvider.cpp  AssetsProvider.h  Model.cpp  Model.h  Texture.cpp  Texture.h
VoxelEngine/src/components/camera/: Camera.h  EditorCameraController.cpp  EditorCameraController.h  FirstPersonCamera.cpp  FirstPersonCamera.h  OrthographicCamera.cpp  OrthographicCamera.h
VoxelEngine/src/components/mesh/: Mesh.h  MeshPrimitives.h  SquareMesh.h  TriangleMesh.h
VoxelEngine/src/core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  NonCopyable.h  PlatformDetection.h  PrimitiveTypes.h  Scene.cpp  Scene.h  Timer.h  Timestep.h  Window.h
VoxelEngine/src/core/imgui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUtils.h  ImGuiWindow.cpp  ImGuiWindow.h
VoxelEngine/src/core/input/: InputSystem.h
VoxelEngine/src/core/renderer/: Buffer.cpp  Buffer.h  Buffers.cpp  Buffers.h  GizmosAPI.cpp  GizmosAPI.h  ImGuiLayer.cpp  ImGuiLayer.h  Image.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  RenderSettings.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLayout.cpp  ShaderLayout.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  UniformBuffer.h  Vertex.h  VertexArray.h  VertexManager.cpp  VertexManager.h  VulkanRenderer.cpp  VulkanRenderer.h
VoxelEngine/src/job_system/: ThreadObject.cpp  ThreadObject.h  ThreadPool.cpp  ThreadPool.h  WorkerThread.cpp  WorkerThread.h
VoxelEngine/src/threading/: Task.h  ThreadPool.h
VoxelEngine/src/vulkan/: VulkanAlloc.cpp  VulkanAlloc.h  VulkanBackend.cpp  VulkanBackend.h  VulkanCommandBuffer.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanFrontend.cpp  VulkanFrontend.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInitializers.h  VulkanPipeline.h  VulkanQueueFamilies.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.h  VulkanSync.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanValidation.cpp  VulkanValidation.h  VulkanVertex.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
(+248 files in other folders)
