cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_TOOLCHAIN_FILE vcpkg/scripts/buildsystems/vcpkg.cmake)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

project(VoxelEngine VERSION 0.0.2)

add_subdirectory(Source/Editor)
add_subdirectory(Source/Runtime)
add_subdirectory(Source/ThirdParty)

# ================ BUILD DIRECTORIES ================
set_target_properties(Runtime PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PREFIX}/Runtime
	LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PREFIX}/Runtime
	RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_PREFIX}/Runtime
)
set_target_properties(Editor PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PREFIX}/Editor
	LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PREFIX}/Editor
	RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_PREFIX}/Editor
	EXECUTABLE_OUTPUT_PATH ${BINARY_OUTPUT_PREFIX}/Editor
)